<resources>
    <string name="app_name">Stay awake on ADB</string>
    <string name="app_version">&lt;u>v %s&lt;/u></string>
    <string name="request_notification_permission">In order to listen for the \'ADB connected\' notification this app
        needs access to read notifications.\nPlease enable this permission for %s</string>
    <string name="request_notification_permission_title">Notification access required</string>
    <string name="service_name">ADB Notification Listener Service</string>
    <string name="developer_options">Developer options</string>
    <string name="developer_options_description">Whether developer options are enabled or not</string>
    <string name="developer_options_on">Developer options are enabled</string>
    <string name="developer_options_off">Developer options are &lt;u>not&lt;/u> enabled</string>
    <string name="usb_debugging">USB debugging</string>
    <string name="usb_debugging_description">Debug mode when USB is connected</string>
    <string name="stay_awake">Stay awake</string>
    <string name="stay_awake_description">Keep screen on when in debug mode</string>
</resources>
